kubernetes/k8s/k8s-deny-all-non-whitelisted-traffic-prod.yaml
#---------------------------------------------------------
#  deny ingress/egress
#---------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prod-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
